--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
   <div class="size margin menu--content container align-items-center justify-content-between">
 
     <div class="" data-aos="fade-right" data-aos-delay="" data-aos-offset="0">
-      <a href="{{ site.baseurl }}/"><span>Jekyll |</span> {{ site.title }}</a>
+      <a href="{{ site.baseurl }}/"><span>Lonero |</span> {{ site.title }}</a>
     </div>
 
     <a href="https://lonero.readthedocs.io" data-aos="fade-left" data-aos-delay="" data-aos-offset="0">
