--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <a href="{{ site.baseurl }}/"><span>Lonero |</span> {{ site.title }}</a>
       </div>
       <div class="by" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">
-        <a href="https://lonero.readthedocs.io" target="_blank">Official Help Deskl</a>
+        <a href="https://lonero.readthedocs.io" target="_blank">Official Help Desk</a>
       </div>
     </div>
   </div>
